sample/msvc/error/c2513.cpp
// C2513.cpp
int main() {
   int = 9;   // C2513
   int i = 9;   // OK
}
